--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title> PSBBMS OMR Website</title>   
+  <title> ABC INTERNATIONAL SCHOOL</title>
+  <!linking the style class-->
+  <link
+  rel = "stylesheet"
+  type = "text/css"
+  href = "style.css"/>   
   <head>
    <body>
+       <div>
     <h2> Welcome to ABC School, INDIA </h2>
     <a href="https://earth.google.com/web/search/india+/@20.98800721,82.75252038,257.6891532a,4445235.45201183d,35y,0.00001326h,0t,0r/data=CnEaRxJBCiUweDMwNjM1ZmYwNmI5MmI3OTE6MHhkNzhjNGZhMTg1NDIxM2E2GZEotKz7lzRAIT1-b9OfvVNAKgZpbmRpYSAYAiABIiYKJAlc4ELHiWk9QBHnHWXPcPkjwBkVhBMYIYpfQCFC36vmZeI0QA">find the location</a>
-    <div>
+       </div>
     <a href="https://velivada.com/timeline/started-indias-first-school-girls/#:~:text=On%201st%20Jan.,Jotiba%20Phule%20and%20Savitribai%20Phule.">about</a>
-    </div>
     <h4>EVENTS</h4>
-    
+    <p2>
+    <a href = '#'><img src = "school pic.png" width = 300 height = 300><a></a>
+    </p2>
+    <div>
     <a href="https://www.fastweb.com/student-life/articles/impressive-extracurriculars">click here to view</a>
+    </div>
    </body>   
   </head>
  </head>
