--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <a href = '#'><img src = "school pic.png" width = 300 height = 300><a></a>
     </p2>
     <div>
-    <a href="https://www.fastweb.com/student-life/articles/impressive-extracurriculars">click here to view</a>
+     <p> 
+      if you want to see the activities done in our precious school,please
+     </p>
+     <a href="https://www.fastweb.com/student-life/articles/impressive-extracurriculars">click here to view</a>
     </div>
    </body>   
   </head>
